overflow fix for section #1

--- a/css/index.css
+++ b/css/index.css
@@ -176,7 +176,6 @@ h1 {
      line-height: 1;
  */
  #section1-2{
-   height: 600px;
    background-image: url('/media/pattern11.png')
  }
 
